; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_x11_common.c_vo_x11_set_property_utf8.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_x11_common.c_vo_x11_set_property_utf8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.vo_x11_state* }
%struct.vo_x11_state = type { i32, i32 }

@UTF8_STRING = common dso_local global i32 0, align 4
@PropModeReplace = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo*, i32, i8*)* @vo_x11_set_property_utf8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vo_x11_set_property_utf8(%struct.vo* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.vo*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.vo_x11_state*, align 8
  store %struct.vo* %0, %struct.vo** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load %struct.vo*, %struct.vo** %4, align 8
  %9 = getelementptr inbounds %struct.vo, %struct.vo* %8, i32 0, i32 0
  %10 = load %struct.vo_x11_state*, %struct.vo_x11_state** %9, align 8
  store %struct.vo_x11_state* %10, %struct.vo_x11_state** %7, align 8
  %11 = load %struct.vo_x11_state*, %struct.vo_x11_state** %7, align 8
  %12 = getelementptr inbounds %struct.vo_x11_state, %struct.vo_x11_state* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.vo_x11_state*, %struct.vo_x11_state** %7, align 8
  %15 = getelementptr inbounds %struct.vo_x11_state, %struct.vo_x11_state* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load %struct.vo_x11_state*, %struct.vo_x11_state** %7, align 8
  %19 = load i32, i32* @UTF8_STRING, align 4
  %20 = call i32 @XA(%struct.vo_x11_state* %18, i32 %19)
  %21 = load i32, i32* @PropModeReplace, align 4
  %22 = load i8*, i8** %6, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 @strlen(i8* %23)
  %25 = call i32 @XChangeProperty(i32 %13, i32 %16, i32 %17, i32 %20, i32 8, i32 %21, i8* %22, i32 %24)
  ret void
}

declare dso_local i32 @XChangeProperty(i32, i32, i32, i32, i32, i32, i8*, i32) #1

declare dso_local i32 @XA(%struct.vo_x11_state*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
